--- a/src/scss/madweek.scss
+++ b/src/scss/madweek.scss
@@ -151,6 +151,10 @@ body {
   top: 125px;
   right: 15px;
   z-index: 2;
+
+  a {
+    color: #d6567d;
+  }
 }
 
 .swiper-container {
